--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ authors = ["Josh Chase <jcjoshuachase@gmail.com>"]
 [dependencies]
 openzwave-stateful = { git = "https://github.com/fxbox/openzwave-stateful-rust" }
 mqtt3 = "*"
+mqttc = "*"
+netopt = "*"
 mustache = "*"
 lazy_static = "*"
 log = "*"
@@ -14,8 +16,6 @@ toml = "*"
 rustc-serialize = "*"
 error-chain = "*"
 env_logger = "*"
-rustls = "*"
-mioco = "*"
 
 [[bin]]
 name = "zwave"
