--- a/catt-zwave/Cargo.toml
+++ b/catt-zwave/Cargo.toml
@@ -4,5 +4,12 @@ version = "0.1.0"
 authors = ["Josh Chase <jcjoshuachase@gmail.com>"]
 
 [dependencies]
+openzwave = { git = "https://github.com/fxbox/openzwave-rust" }
+openzwave-stateful = { git = "https://github.com/fxbox/openzwave-stateful-rust" }
 catt-core = { path = "../catt-core" }
 log = "*"
+error-chain = "*"
+rustc-serialize = "*"
+
+[dev-dependencies]
+env_logger = "*"
