--- a/config.toml
+++ b/config.toml
@@ -6,8 +6,8 @@ client-id = "catt-zwave"
 [zwave]
 port = "/dev/ttyUSB0"
 expose_unbound = true
-sys_config = "/tmp/nothing_here"
-user_config = "/tmp/user_nothing_here"
+sys_config = "/etc/openzwave-git"
+user_config = "./config"
 
 [[zwave.device]]
 id = 1
@@ -16,4 +16,5 @@ name = "controller"
 [[zwave.device]]
 id = 2
 name = "Light_Living_Table"
-command = "switch_multilevel"
+zwave_label = "level"
+value_type = "int"
