Add meta channel plus other minor changes
This required the addition of a new trait method for Item and a
restructure of the Message type from a struct to an enum.

* Bring zwave naming in line with catt-core (Value -> Item)
* Remove delay in zwave controller startup
* Add proper join method for Bridge
* Don't send a state update on an Added event
* Use Debug for more errors
* Make the MQTT message callback its own function

--- a/catt-mqtt/Cargo.toml
+++ b/catt-mqtt/Cargo.toml
@@ -8,6 +8,7 @@ catt-core = { path = "../catt-core" }
 error-chain = "*"
 log = "*"
 rustc-serialize = "*"
+toml = "*"
 rumqtt = { git = "https://github.com/Ather-Energy/RuMqtt.git" }
 
 [dev-dependencies]
