--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Josh Chase <jcjoshuachase@gmail.com>"]
 
 [dependencies]
 env_logger = "*"
+log = "*"
 rustc-serialize = "*"
 toml = "*"
 error-chain = "*"
