Fix net2 dependency features
This the difference in enabled features was making cargo rebuild
it every time you switched from one crate to another, so it never got
cached. Forcing the dependency in catt-zwave to have the same features
enabled fixes this. Not sure if that breaks anything though.

--- a/catt-zwave/Cargo.toml
+++ b/catt-zwave/Cargo.toml
@@ -10,6 +10,7 @@ catt-core = { path = "../catt-core" }
 log = "*"
 error-chain = "*"
 rustc-serialize = "*"
+net2 = { version = "*", default-features = true }
 
 [dev-dependencies]
 env_logger = "*"
