ZWave re-implementation without stateful
This gets rid of an extra thread required to convert openzwave_stateful
notifications to catt notifications.

--- a/catt-zwave/Cargo.toml
+++ b/catt-zwave/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 authors = ["Josh Chase <jcjoshuachase@gmail.com>"]
 
 [dependencies]
+serial_ports = { git = "https://github.com/dhylands/serial-ports-rs" }
 openzwave = { git = "https://github.com/fxbox/openzwave-rust" }
-openzwave-stateful = { git = "https://github.com/fxbox/openzwave-stateful-rust" }
 catt-core = { path = "../catt-core" }
 log = "*"
 error-chain = "*"
