--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ rust:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install openssl libudev-dev
-script: make
+script: make docker
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
     docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
