--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ log = "0.3"
 rustc-serialize = "0.3"
 toml = "0.2"
 error-chain = "0.5"
+futures = "0.1"
+tokio-core = "0.1"
 
 catt-core = { path = "./catt-core", version = "0.1" }
 catt-mqtt = { path = "./catt-mqtt", version = "0.1" }
