--- a/catt-mqtt/Cargo.toml
+++ b/catt-mqtt/Cargo.toml
@@ -15,6 +15,8 @@ log = "0.3"
 rustc-serialize = "0.3"
 toml = "0.2"
 chrono = "0.2"
+tokio-core = "0.1"
+futures = "0.1"
 
 [dev-dependencies]
 env_logger = "0.3"
