--- a/catt-zwave/Cargo.toml
+++ b/catt-zwave/Cargo.toml
@@ -10,10 +10,12 @@ repository = "https://github.com/catt-ha/catt-rs"
 [dependencies]
 serial_ports = { git = "https://github.com/dhylands/serial-ports-rs" }
 openzwave = { git = "https://github.com/fxbox/openzwave-rust" }
-catt-core = { path = "../catt-core", version = "0.1" }
+catt-core = { path = "../catt-core", version = "0.1.0" }
 log = "0.3"
 error-chain = "0.5"
 rustc-serialize = "0.3"
+futures = "0.1"
+tokio-core = "0.1"
 
 [dev-dependencies]
 env_logger = "*"
